[tool.poetry]
name = "finance-api"
version = "0.1.0"
description = ""
authors = ["Renne Rocha <renne@rennerocha.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.54.1"
dynaconf = "^2.2.3"
requests = "^2.23.0"
uvicorn = "^0.11.3"
sqlalchemy = "^1.3.16"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipdb = "^0.13.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
